tests/programs/symex/a5-test-cases/pass/symex_vars_pass.rice
// symex
#[symex]
fn example(x: int) {
  let y = x + 1 in
  x := y * 2;
  if x > 0 {
    assert(y > 0)
  }
}